2010-10-14  Dao Tran Minh  <dao@kr.tuwien.ac.at>

	* src/dynGen.cpp: Add killall dmcsd at the beginning of the shell script.

2010-10-13  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/ParserDirector.tcc: Use getline() to fill up buf instead
	of rdbuf().

2010-10-13  Minh Dao Tran  <dao@.kr.tuwien.ac.at>

	* src/DynamicConfiguration.cpp: Add new heuristics.

	* include/BaseSortingStrategy.h: Define constants for heuristic cases.

	* include/Makefile.am: Add QualityCtxSortingStrategy.h.
	* include/QualityCtxSortingStrategy.h: New file.

	* include/NoSBACtxSortingStrategy.h: Changed guarding macro.
	* include/ChosenQualityCtxSortingStrategy.h: Likewise.
	* include/ChosenCtxSortingStrategy.h: Likewise.
	* include/NoSBAQualityCtxSortingStrategy.h: Likewise.

2010-10-07  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/CommandTypeFactory.h: Return new objects for create().

	* include/DynamicCommandType.h: Remove some debugging information.

2010-10-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcsd.cpp: Enable static mode.

	* include/PrimitiveCommandType.h: Add PrimitiveCommandTypePtr.

	* include/OptCommandType.h: Add OptCommandTypePtr.

	* include/Handler.tcc: Remove #include "Handler.h"

	* include/CommandTypeFactory.h: Add support for PrimitiveDMCS and OptDMCS.
	* src/Server.cpp: Likewise.

2010-10-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/DynamicConfiguration.cpp: Fix the case where we get a
	constant context id and still need to bind the schematic belief.

2010-10-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/Instantiator.cpp: Remove duplicate code.

	* include/Instantiator.tcc: New file.
	* include/Instantiator.h: include Instantiator.tcc.

2010-10-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/Server.tcc: Remove.

	* include/Makefile.am: Add
	InstantiateForwardMessage.h and InstantiateBackwardMessage.h.

	* include/Instantiator.h: Adapt to new types of
	instantiating messages.
	* include/InstantiatorCommandType.h: Likewise.